--- a/pages/index.css
+++ b/pages/index.css
@@ -10,12 +10,12 @@
   padding: 40px 20px;
   position: relative;
 }
-.header__nav {
+.nav {
   display: flex;
   justify-content: flex-end;
   gap: 30px;
 }
-.header__link {
+.nav__link {
   color: #000;
   text-decoration: none;
   font-size: 16px;
@@ -29,7 +29,7 @@
 .header__accent {
   font-style: italic;
 }
-.header__subtitle,
+.header__description,
 .header__hours {
   font-size: 20px;
   margin-top: 20px;
@@ -61,7 +61,7 @@
   width: 100%;
   height: auto;
 }
-.recipes__video {
+.recipes__iframe {
   width: 100%;
   height: 200px;
   margin-top: 16px;
