--- a/pages/index.css
+++ b/pages/index.css
@@ -10,17 +10,18 @@
   padding: 40px 20px;
   position: relative;
 }
-.header__nav {
+.header__nav .nav {
   .nav {
     display: flex;
     justify-content: flex-end;
     gap: 30px;
   }
   .header__link {
-  .nav__link {
-    color: #000;
-    text-decoration: none;
-    font-size: 16px;
+    .nav__link {
+      color: #000;
+      text-decoration: none;
+      font-size: 16px;
+    }
   }
   .header__title {
     font-family: "Noto Serif", serif;
@@ -64,12 +65,10 @@
   width: 100%;
   height: auto;
 }
-.recipes__video{
 .recipes__iframe {
   width: 100%;
   height: 200px;
   margin-top: 16px;
-}
 }
 
 /* MENU */
